kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: shop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - shop.35.228.157.95.nip.io
    secretName: shop-tls
  rules:
  - host: shop.35.228.157.95.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
